# OSTRIDGE

./: .gitignore  README.md
ostridge/: Cargo.toml
ostridge/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  ps_2_scancodes.rs  serial.rs  vga_buffer.rs
