[package]
name = "ostridge"
version = "0.1.0"
authors = ["KyleS22 <25314187+KyleS22@users.noreply.github.com>"]

[package.metadata.bootimage]
default-target = "x86_64-ostridge.json"

[dependencies]
bootloader_precompiled = "0.2.0"
volatile = "0.2.3"
spin = "0.4.6"
uart_16550 = "0.1.0"
x86_64 = "0.2.8"

[dev-dependencies]
array-init = "0.0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]